# Victoria

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.prod  GIT_SETUP.md  README.md  config.py  deploy.sh  deploy_now.ps1  docker-compose.prod.yml  docker-compose.yml  docker-start-prod.sh  docker-start.sh  docker.env  env.prod  main.py  ml_dashboard.html  nginx.conf  nginx.prod.conf  processed_for_trait_scoring.txt  psychometric_test.csv  pyproject.toml  railway.toml  requirements.txt  run_api.py  run_streamlit_fixed.py  sample_processed_data.txt  setup.py  start_dashboard.py  startup.sh  streamlit_app.py  test_dashboard.py  test_docker_api.py  test_local_api.py  test_refined_report.py  test_reports_integration.py  (+8 more)
.claude/: settings.local.json
api/: main.py
api/models/: request_models.py  response_models.py
api/routes/: assessment.py  reports.py
api/services/: file_handler.py  pipeline_service.py
api/utils/: exceptions.py  validators.py
app/: __init__.py
app/api/: main.py
app/streamlit/: main.py
scripts/: complete_pipeline_with_reports.py  debug_trait_scoring.py  test_complete_flow.py
src/clustering/: __init__.py  clustering_engine.py
src/data/: __init__.py  advanced_rasch_processor.py  comprehensive_processor.py  data_ingestion.py  data_preprocessor.py  data_validator.py  item_mapper.py  rasch_analysis.py  target_format_processor.py
src/pipeline/: __init__.py  main_orchestrator.py
tests/: test_pipeline.py  test_victoria.py  test_victoria_simple.py
victoria/: __init__.py
(+53 files in other folders)
